infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.igress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - path: /posts/create
        pathType: Exact
        backend:
          service:
            name: posts-srv
            port: 
              number: 3001
      
      - path: /posts/comments
        pathType: Prefix
        backend:
          service:
            name: comments-srv
            port:
              number: 3002

      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 3003

      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
